--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Task.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Task.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
       <Polygon fill="#4fc3f70d" layoutX="-121.0" layoutY="-520.0" points="120.99995422363281, 919.0, 121.99998474121094, 486.0, 481.7999267578125, 919.0" stroke="TRANSPARENT" strokeType="INSIDE" />
@@ -16,7 +15,7 @@
       <Polygon fill="#4fc3f70d" layoutX="-121.0" layoutY="-516.0" points="120.99996948242188, 915.0, 121.99998474121094, 486.0, 240.99993896484375, 915.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <TextField fx:id="taskName" layoutX="227.0" layoutY="135.0" promptText="Task's name" />
       <TextArea fx:id="taskDescription" layoutX="152.0" layoutY="185.0" prefHeight="60.0" prefWidth="300.0" promptText="Description" />
-      <Button id="registerBtn" fx:id="addTask" layoutX="215.0" layoutY="289.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="170.0" style="-fx-background-color: #4fc3f7;" text="ADD" textAlignment="CENTER" textFill="WHITE">
+      <Button id="registerBtn" fx:id="loadTask" layoutX="215.0" layoutY="289.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="170.0" style="-fx-background-color: #4fc3f7;" text="ADD" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Calibri Bold" size="24.0" />
          </font>
