--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/StatsV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/StatsV2.fxml
@@ -13,12 +13,11 @@
 
 <AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
-      <TableView layoutX="331.0" layoutY="215.0" prefHeight="510.0" prefWidth="940.0" style="-fx-background-color: #00000056; -fx-background: #d0f8d01c;">
+      <TableView layoutX="80.0" layoutY="215.0" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #00000056; -fx-background: #d0f8d01c;">
          <columns>
-            <TableColumn prefWidth="65.0" text="Select" />
-            <TableColumn prefWidth="263.0" text="Name of the project" />
-            <TableColumn minWidth="0.0" prefWidth="397.0" text="Description of the project" />
-            <TableColumn minWidth="0.0" prefWidth="214.0" text="Sub projects" />
+            <TableColumn prefWidth="203.33331298828125" text="Project's name " />
+            <TableColumn minWidth="0.0" prefWidth="316.6666259765625" text="Description " />
+            <TableColumn minWidth="0.0" prefWidth="196.00018310546875" text="Sub projects" />
          </columns>
       </TableView>
       <VBox layoutX="145.0" layoutY="70.0" prefHeight="73.0" prefWidth="596.0">
@@ -32,7 +31,7 @@
          </children>
       </VBox>
       <HBox alignment="CENTER_RIGHT" layoutX="489.0" layoutY="396.0" prefHeight="62.0" prefWidth="74.0" spacing="10.0" />
-      <Button fx:id="BackToMainMenu" layoutX="8.0" layoutY="7.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="81.0" prefWidth="93.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
+      <Button fx:id="backToProjectMenu" layoutX="8.0" layoutY="7.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="81.0" prefWidth="93.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -45,7 +44,7 @@
       <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="374.0" points="208.00001525878906, 539.2000122070312, 208.0, -368.0, 686.5999755859375, 539.2000122070312" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4ec8f50d" layoutX="-214.0" layoutY="374.0" points="216.00001525878906, 539.2000122070312, 213.59999084472656, -369.1999816894531, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-162.0" layoutY="374.0" points="161.59999084472656, 540.0, 162.60000610351562, -370.79998779296875, 451.5999755859375, 541.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Button fx:id="visualiseBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1199.0" layoutY="795.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000000;" text="Visualise" textFill="WHITE">
+      <Button fx:id="visualiseBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="380.0" layoutY="750.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000000;" text="Visualise" textFill="WHITE">
          <font>
             <Font size="15.0" />
          </font>
@@ -74,5 +73,19 @@
             </Button>
          </children>
       </HBox>
+      <TableView layoutX="870.0" layoutY="215.0" prefHeight="500.0" prefWidth="552.0" style="-fx-background-color: #00000056; -fx-background: #f4cbff1d;">
+         <columns>
+            <TableColumn prefWidth="35.0" text="Nb" />
+            <TableColumn prefWidth="200.0" text="Person" />
+            <TableColumn prefWidth="142.0" text="Tasks remaining" />
+            <TableColumn prefWidth="76.0" text="Real " />
+            <TableColumn prefWidth="99.0" text="Estimated " />
+         </columns>
+      </TableView>
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1100.0" layoutY="750.0" lineSpacing="10.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000000;" text="Export" textFill="WHITE">
+         <font>
+            <Font size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
