--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/StatsV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/StatsV2.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -11,15 +11,8 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
+<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.StatsController">
    <children>
-      <TableView layoutX="80.0" layoutY="215.0" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #00000056; -fx-background: #d0f8d01c;">
-         <columns>
-            <TableColumn prefWidth="203.33331298828125" text="Project's name " />
-            <TableColumn minWidth="0.0" prefWidth="316.6666259765625" text="Description " />
-            <TableColumn minWidth="0.0" prefWidth="196.00018310546875" text="Sub projects" />
-         </columns>
-      </TableView>
       <VBox layoutX="145.0" layoutY="70.0" prefHeight="73.0" prefWidth="596.0">
          <children>
             <Label prefHeight="48.0" prefWidth="231.0" text="Statistics">
@@ -44,11 +37,6 @@
       <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="374.0" points="208.00001525878906, 539.2000122070312, 208.0, -368.0, 686.5999755859375, 539.2000122070312" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4ec8f50d" layoutX="-214.0" layoutY="374.0" points="216.00001525878906, 539.2000122070312, 213.59999084472656, -369.1999816894531, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-162.0" layoutY="374.0" points="161.59999084472656, 540.0, 162.60000610351562, -370.79998779296875, 451.5999755859375, 541.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Button fx:id="visualiseBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="380.0" layoutY="750.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000000;" text="Visualise" textFill="WHITE">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Button>
       <HBox alignment="BOTTOM_RIGHT" layoutX="1087.0" layoutY="20.0" prefHeight="51.0" prefWidth="399.0" spacing="12.0">
          <children>
             <Button minWidth="53.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="93.0" style="-fx-background-color: C0D6E1;" text="Profile" textFill="WHITE">
@@ -66,26 +54,26 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button id="connectionBtn" fx:id="LogOutBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="56.0" prefWidth="110.0" style="-fx-background-color: CC8B8B;" text="Log out" textAlignment="CENTER" textFill="WHITE" underline="true">
+            <Button id="connectionBtn" fx:id="logOutBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="56.0" prefWidth="110.0" style="-fx-background-color: CC8B8B;" text="Log out" textAlignment="CENTER" textFill="WHITE" underline="true">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </Button>
          </children>
       </HBox>
-      <TableView layoutX="870.0" layoutY="215.0" prefHeight="500.0" prefWidth="552.0" style="-fx-background-color: #00000056; -fx-background: #f4cbff1d;">
-         <columns>
-            <TableColumn prefWidth="35.0" text="Nb" />
-            <TableColumn prefWidth="200.0" text="Person" />
-            <TableColumn prefWidth="142.0" text="Tasks remaining" />
-            <TableColumn prefWidth="76.0" text="Real " />
-            <TableColumn prefWidth="99.0" text="Estimated " />
-         </columns>
-      </TableView>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1100.0" layoutY="750.0" lineSpacing="10.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000000;" text="Export" textFill="WHITE">
+      <Button fx:id="exportBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1225.0" layoutY="763.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000000;" text="Export" textFill="WHITE">
          <font>
             <Font size="12.0" />
          </font>
       </Button>
+      <TreeTableView fx:id="projectsTreeView" layoutX="300.0" layoutY="194.0" prefHeight="534.0" prefWidth="1028.0" style="-fx-background-color: #00000056;">
+        <columns>
+          <TreeTableColumn fx:id="projectsColumn" prefWidth="332.0" text="Projects" />
+            <TreeTableColumn fx:id="collaboratorsColumn" prefWidth="369.0" text="Collaborators" />
+            <TreeTableColumn fx:id="tasksColumn" prefWidth="135.0" text="Tasks" />
+            <TreeTableColumn fx:id="realColumn" prefWidth="75.0" text="Real" />
+            <TreeTableColumn fx:id="estimatedColumn" prefWidth="97.0" text="Estimated" />
+        </columns>
+      </TreeTableView>
    </children>
 </AnchorPane>
