--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Projects.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Projects.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -15,13 +16,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.ProjectsController">
    <children>
-      <Pane layoutX="-1.0" layoutY="-7.0" prefHeight="908.0" prefWidth="461.0" style="-fx-background-color: #3B6CD1;">
+      <Polygon fill="#4fc3f70d" layoutX="720.0" layoutY="-284.0" points="467.5, 1184.0, 780.0, 285.0, 780.0, 1184.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="1249.0" layoutY="-476.0" points="-374.0, 1376.0, 251.0, 476.0, 251.0, 1376.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="1173.0" layoutY="-456.0" points="-192.0, 1356.0, 327.0, 457.0, 327.0, 1356.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="1135.0" layoutY="-481.0" points="-56.0, 1381.0, 365.0, 481.0, 365.0, 1381.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Pane prefHeight="436.0" prefWidth="461.0" style="-fx-background-color: #afd7fa;">
          <children>
-            <VBox layoutX="89.0" layoutY="258.0" prefHeight="325.0" prefWidth="283.0" spacing="40.0">
+            <VBox layoutX="119.0" layoutY="72.0" prefHeight="293.0" prefWidth="226.0" spacing="40.0">
                <children>
                   <TextField fx:id="nameProject" prefHeight="35.0" promptText="Project's name" />
                   <TextField fx:id="descriptionProject" prefHeight="35.0" promptText="Description" />
@@ -30,12 +37,16 @@
                   <TextField fx:id="parentProject" prefHeight="35.0" prefWidth="283.0" promptText="Parent( optionnal )" />
                </children>
             </VBox>
-            <Button fx:id="addProjectBtn" layoutX="132.0" layoutY="626.0" mnemonicParsing="false" onAction="#Events" prefHeight="54.0" prefWidth="198.0" style="-fx-background-color: #B9DCE4;" text="Add" />
-            <Label layoutX="82.0" layoutY="89.0" text="Create Project" textFill="#fcf7f7" underline="true">
+            <Button fx:id="addProjectBtn" layoutX="163.0" layoutY="388.0" mnemonicParsing="false" onAction="#Events" prefHeight="34.0" prefWidth="144.0" style="-fx-background-color: #bcbcbc;" text="ADD" textFill="WHITE">
                <font>
-                  <Font size="48.0" />
+                  <Font name="Calibri" size="12.0" />
                </font>
-            </Label>
+            </Button>
+            <Text fill="WHITE" layoutX="154.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADD A PROJECT">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
       <TreeTableView fx:id="treeProjects" layoutX="519.0" layoutY="192.0" onContextMenuRequested="#displayTask" onMouseClicked="#displayTask" prefHeight="511.0" prefWidth="322.0">
@@ -60,7 +71,35 @@
       <Accordion layoutX="467.0" layoutY="755.0" />
       <TextArea fx:id="descriptionTask" layoutX="980.0" layoutY="727.0" prefHeight="62.0" prefWidth="219.0" promptText="Description" />
       <TextField fx:id="taskParent" layoutX="1212.0" layoutY="743.0" prefHeight="25.0" prefWidth="127.0" promptText="Project's name" />
-      <Button fx:id="addTaskBtn" layoutX="1348.0" layoutY="743.0" mnemonicParsing="false" onAction="#addTask" style="-fx-background-color: #3B6CD1;" text="add" textFill="WHITE" />
-      <Button fx:id="backBtn" layoutX="1385.0" layoutY="822.0" mnemonicParsing="false" onAction="#Events" prefHeight="43.0" prefWidth="78.0" style="-fx-background-color: #3B6CD1;" text="Back" textFill="WHITE" />
+      <Button fx:id="addTaskBtn" layoutX="1348.0" layoutY="743.0" mnemonicParsing="false" onAction="#addTask" style="-fx-background-color: #74b5ee;" text="add" textFill="WHITE" />
+      <Button fx:id="backBtn" layoutX="1385.0" layoutY="822.0" mnemonicParsing="false" onAction="#Events" prefHeight="43.0" prefWidth="78.0" style="-fx-background-color: #74b5ee;" text="Back" textFill="WHITE" />
+      <Label layoutX="477.0" layoutY="14.0" text="Manage Project" textFill="#556668" underline="true">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Label>
+      <Pane layoutY="436.0" prefHeight="464.0" prefWidth="461.0" style="-fx-background-color: #afd7fa;">
+         <children>
+            <VBox layoutX="122.0" layoutY="95.0" prefHeight="293.0" prefWidth="226.0" spacing="40.0">
+               <children>
+                  <ComboBox fx:id="projectSelection" onAction="#Select" prefHeight="25.0" prefWidth="235.0" promptText="Select Project" style="-fx-background-color: #bcbcbc;" />
+                  <TextField fx:id="newNameProject" prefHeight="35.0" promptText="Project's new name" />
+                  <TextField fx:id="newdescription" prefHeight="35.0" promptText="New description" />
+                  <DatePicker fx:id="newDateProject" prefHeight="35.0" prefWidth="295.0" promptText="New date" />
+                  <TextField fx:id="newTagsProject" prefHeight="35.0" prefWidth="283.0" promptText="New tags" />
+               </children>
+            </VBox>
+            <Text fill="WHITE" layoutX="154.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT A PROJECT">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Text>
+            <Button fx:id="EditProjectBtn" layoutX="168.0" layoutY="416.0" mnemonicParsing="false" onAction="#Events" prefHeight="34.0" prefWidth="134.0" style="-fx-background-color: #bcbcbc;" text="EDIT" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
