--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Projects.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Projects.fxml
@@ -26,7 +26,7 @@
       <Polygon fill="#4fc3f70d" layoutX="1249.0" layoutY="-476.0" points="-374.0, 1376.0, 251.0, 476.0, 251.0, 1376.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="1173.0" layoutY="-456.0" points="-192.0, 1356.0, 327.0, 457.0, 327.0, 1356.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="1135.0" layoutY="-481.0" points="-56.0, 1381.0, 365.0, 481.0, 365.0, 1381.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Pane prefHeight="436.0" prefWidth="461.0" style="-fx-background-color: #afd7fa;">
+      <Pane prefHeight="436.0" prefWidth="461.0" style="-fx-background-color: #4fc3f7;">
          <children>
             <VBox layoutX="119.0" layoutY="72.0" prefHeight="293.0" prefWidth="226.0" spacing="40.0">
                <children>
@@ -78,14 +78,14 @@
       <Accordion layoutX="467.0" layoutY="755.0" />
       <TextArea fx:id="descriptionTask" layoutX="980.0" layoutY="727.0" prefHeight="62.0" prefWidth="219.0" promptText="Description" />
       <TextField fx:id="taskParent" layoutX="1212.0" layoutY="743.0" prefHeight="25.0" prefWidth="127.0" promptText="Project's name" />
-      <Button fx:id="addTaskBtn" layoutX="1348.0" layoutY="743.0" mnemonicParsing="false" onAction="#addTask" style="-fx-background-color: #74b5ee;" text="add" textFill="WHITE" />
-      <Button fx:id="backBtn" layoutX="1385.0" layoutY="822.0" mnemonicParsing="false" onAction="#Events" prefHeight="43.0" prefWidth="78.0" style="-fx-background-color: #74b5ee;" text="Back" textFill="WHITE" />
+      <Button fx:id="addTaskBtn" layoutX="1348.0" layoutY="743.0" mnemonicParsing="false" onAction="#addTask" style="-fx-background-color: #4fc3f7;" text="add" textFill="WHITE" />
+      <Button fx:id="backBtn" layoutX="1385.0" layoutY="822.0" mnemonicParsing="false" onAction="#Events" prefHeight="43.0" prefWidth="78.0" style="-fx-background-color: #4fc3f7;" text="Back" textFill="WHITE" />
       <Label layoutX="477.0" layoutY="14.0" text="Manage Project" textFill="#556668" underline="true">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Pane layoutY="436.0" prefHeight="464.0" prefWidth="461.0" style="-fx-background-color: #afd7fa;">
+      <Pane layoutY="436.0" prefHeight="464.0" prefWidth="461.0" style="-fx-background-color: #4fc3f7;">
          <children>
             <VBox layoutX="122.0" layoutY="95.0" prefHeight="293.0" prefWidth="226.0" spacing="40.0">
                <children>
@@ -108,5 +108,10 @@
             </Button>
          </children>
       </Pane>
+      <Text fx:id="ErrorText" fill="RED" layoutX="524.0" layoutY="728.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="322.0">
+         <font>
+            <Font name="Calibri" size="12.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
