--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/StatsV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/StatsV2.fxml
@@ -24,7 +24,7 @@
          </children>
       </VBox>
       <HBox alignment="CENTER_RIGHT" layoutX="489.0" layoutY="396.0" prefHeight="62.0" prefWidth="74.0" spacing="10.0" />
-      <Button fx:id="backToProjectMenu" layoutX="8.0" layoutY="7.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="81.0" prefWidth="93.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
+      <Button fx:id="backToProjectMenu" layoutX="8.0" layoutY="7.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="81.0" prefWidth="93.0" style="-fx-background-color: #4fc3f7;" text="Back" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -37,33 +37,33 @@
       <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="374.0" points="208.00001525878906, 539.2000122070312, 208.0, -368.0, 686.5999755859375, 539.2000122070312" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4ec8f50d" layoutX="-214.0" layoutY="374.0" points="216.00001525878906, 539.2000122070312, 213.59999084472656, -369.1999816894531, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-162.0" layoutY="374.0" points="161.59999084472656, 540.0, 162.60000610351562, -370.79998779296875, 451.5999755859375, 541.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <HBox alignment="BOTTOM_RIGHT" layoutX="1087.0" layoutY="20.0" prefHeight="51.0" prefWidth="399.0" spacing="12.0">
+      <HBox alignment="BOTTOM_RIGHT" layoutX="1059.0" layoutY="20.0" prefHeight="51.0" prefWidth="427.0" spacing="12.0">
          <children>
-            <Button minWidth="53.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="93.0" style="-fx-background-color: C0D6E1;" text="Profile" textFill="WHITE">
+            <Button minWidth="53.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="93.0" style="-fx-background-color: #4fc3f7;" text="PROFILE" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="18.0" />
+               </font>
+            </Button>
+            <Button minWidth="53.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="104.0" style="-fx-background-color: #4fc3f7;" text="SETTINGS" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="18.0" />
+               </font>
+            </Button>
+            <Button alignment="CENTER" minWidth="45.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="67.0" style="-fx-background-color: #4fc3f7;" text="?" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button minWidth="53.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="83.0" style="-fx-background-color: C0D6E1;" text="Settings" textFill="WHITE">
+            <Button id="connectionBtn" fx:id="logOutBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="56.0" prefWidth="110.0" style="-fx-background-color: #4fc3f7;" text="LOGOUT" textAlignment="CENTER" textFill="WHITE" underline="true">
                <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" minWidth="45.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="67.0" style="-fx-background-color: C0D6E1;" text="?" textFill="WHITE">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button id="connectionBtn" fx:id="logOutBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="56.0" prefWidth="110.0" style="-fx-background-color: CC8B8B;" text="Log out" textAlignment="CENTER" textFill="WHITE" underline="true">
-               <font>
-                  <Font name="System Bold" size="11.0" />
+                  <Font name="Calibri" size="18.0" />
                </font>
             </Button>
          </children>
       </HBox>
-      <Button fx:id="exportBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1225.0" layoutY="763.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000000;" text="Export" textFill="WHITE">
+      <Button fx:id="exportBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1225.0" layoutY="763.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #4fc3f7;" text="EXPORT" textFill="WHITE">
          <font>
-            <Font size="12.0" />
+            <Font name="Calibri" size="18.0" />
          </font>
       </Button>
       <TreeTableView fx:id="projectsTreeView" layoutX="300.0" layoutY="194.0" prefHeight="534.0" prefWidth="1028.0" style="-fx-background-color: #00000056;">
