--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/ProjectMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/ProjectMenu.fxml
@@ -13,19 +13,19 @@
    <children>
       <HBox layoutX="303.0" layoutY="363.0" spacing="40.0">
          <children>
-            <Button fx:id="ManageProjetcsBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="201.0" prefWidth="432.0" style="-fx-background-color: #4fc3f7;" text="MANAGE PROJECTS " textFill="#f2f1f0">
+            <Button fx:id="projectMangementBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="201.0" prefWidth="432.0" style="-fx-background-color: #4fc3f7;" text="MANAGE PROJECTS " textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="StatisticsAccessBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="201.0" prefWidth="422.0" style="-fx-background-color: #4fc3f7;" text=" STATISTICS" textFill="#f2f1f0">
+            <Button fx:id="statsAccessBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="201.0" prefWidth="422.0" style="-fx-background-color: #4fc3f7;" text=" STATISTICS" textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
          </children>
       </HBox>
-      <Button fx:id="MainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
+      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0" />
          </font></Button>
