--- a/src/be/ac/ulb/infof307/g06/views/MenuView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/MenuView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.LoginViewController">
    <children>
       <HBox layoutX="259.0" layoutY="350.0" spacing="40.0">
          <children>
@@ -23,7 +23,7 @@
                <graphic>
                   <ImageView fitHeight="102.0" fitWidth="93.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@icons/USER_ICON.png" />
+                        <Image url="@../icons/USER_ICON.png" />
                      </image>
                      <effect>
                         <Blend />
@@ -38,7 +38,7 @@
                <graphic>
                   <ImageView blendMode="HARD_LIGHT" fitHeight="90.0" fitWidth="219.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@icons/PROJECT_ICON.png" />
+                        <Image url="@../icons/PROJECT_ICON.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -50,7 +50,7 @@
                <graphic>
                   <ImageView fitHeight="83.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@icons/CALENDAR_INCON.png" />
+                        <Image url="@../icons/CALENDAR_INCON.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -62,7 +62,7 @@
                <graphic>
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@icons/PARAMETER_SYMBOL.png" />
+                        <Image url="@../icons/PARAMETER_SYMBOL.png" />
                      </image>
                   </ImageView>
                </graphic>
