--- a/src/be/ac/ulb/infof307/g06/views/TaskView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/TaskView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.LoginViewController">
    <children>
       <Polygon fill="#4fc3f70d" layoutX="-121.0" layoutY="-520.0" points="120.99995422363281, 919.0, 121.99998474121094, 486.0, 481.7999267578125, 919.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-121.0" layoutY="-515.0" points="121.99998474121094, 914.5999755859375, 121.99998474121094, 486.0, 396.99993896484375, 914.5999755859375" stroke="TRANSPARENT" strokeType="INSIDE" />
