--- a/src/be/ac/ulb/infof307/g06/views/ProjectMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectMenu.fxml
@@ -9,23 +9,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.LoginViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.MenuViewController">
    <children>
       <HBox layoutX="303.0" layoutY="363.0" spacing="40.0">
          <children>
-            <Button fx:id="projectMangementBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="201.0" prefWidth="432.0" style="-fx-background-color: #4fc3f7;" text="MANAGE PROJECTS " textFill="#f2f1f0">
+            <Button fx:id="projectManagementBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" onAction="#menuEvents" prefHeight="201.0" prefWidth="432.0" style="-fx-background-color: #4fc3f7;" text="MANAGE PROJECTS " textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="statsAccessBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="201.0" prefWidth="422.0" style="-fx-background-color: #4fc3f7;" text=" STATISTICS" textFill="#f2f1f0">
+            <Button fx:id="statsAccessBtn" mnemonicParsing="false" onAction="#menuEvents" prefHeight="201.0" prefWidth="422.0" style="-fx-background-color: #4fc3f7;" text=" STATISTICS" textFill="#f2f1f0">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
          </children>
       </HBox>
-      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
+      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#menuEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0" />
          </font></Button>
