--- a/src/be/ac/ulb/infof307/g06/views/ProjectsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectsView.fxml
@@ -19,6 +19,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.CheckComboBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.ProjectsViewController">
    <children>
@@ -33,7 +34,7 @@
                   <TextField fx:id="nameProject" prefHeight="35.0" promptText="Project's name" />
                   <TextField fx:id="descriptionProject" prefHeight="35.0" promptText="Description" />
                   <DatePicker fx:id="dateProject" prefHeight="35.0" prefWidth="295.0" promptText="Date" />
-                  <TextField fx:id="tagsProject" prefHeight="35.0" prefWidth="283.0" promptText="Tags" />
+                  <CheckComboBox fx:id="tagsProject" prefHeight="35.0" prefWidth="226.0" />
                   <TextField fx:id="parentProject" prefHeight="35.0" prefWidth="283.0" promptText="Parent( optionnal )" />
                </children>
             </VBox>
