--- a/src/be/ac/ulb/infof307/g06/views/LoginView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/LoginView.fxml
@@ -4,14 +4,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 <AnchorPane prefHeight="425.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.LoginViewController">
    <children>
       <GridPane hgap="10.0" layoutY="-89.0" prefHeight="381.2" prefWidth="694.2" vgap="10.0" AnchorPane.bottomAnchor="89.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-89.0">
@@ -60,6 +56,7 @@
       <Polygon fill="#4fc3f70d" layoutX="-122.0" layoutY="-481.0" points="121.99998474121094, 914.5999755859375, 121.99998474121094, 486.0, 396.99993896484375, 914.5999755859375" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-123.0" layoutY="-478.0" points="121.99999237060547, 911.0, 121.99998474121094, 486.0, 316.39996337890625, 911.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-122.0" layoutY="-482.0" points="120.99996948242188, 915.0, 121.99998474121094, 486.0, 240.99993896484375, 915.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Text fx:id="wrongEntriesField" fill="#c62525" layoutX="170.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="380.0" />
+      <Text fx:id="loginErrMsg" fill="#c62525" layoutX="170.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0"
+            textAlignment="CENTER" wrappingWidth="380.0"/>
    </children>
 </AnchorPane>
