Mise à jour des controllers de vus et controller pour les login et le sign up+ ajout d'un nouveau controller de vu pour les conditions.

--- a/src/be/ac/ulb/infof307/g06/views/LoginView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/LoginView.fxml
@@ -34,12 +34,12 @@
                   <Insets />
                </GridPane.margin>
             </PasswordField>
-            <Button id="connectionBtn" fx:id="connectionBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="45.0" prefWidth="204.0" style="-fx-background-color: #4fc3f7;" text="LOG IN" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Button id="connectionBtn" fx:id="connectionBtn" mnemonicParsing="false" onAction="#events" prefHeight="45.0" prefWidth="204.0" style="-fx-background-color: #4fc3f7;" text="LOG IN" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font name="Calibri Bold" size="24.0" />
                </font>
             </Button>
-            <Button id="registerBtn" fx:id="registerBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="45.0" prefWidth="226.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="5">
+            <Button id="registerBtn" fx:id="registerBtn" mnemonicParsing="false" onAction="#events" prefHeight="45.0" prefWidth="226.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="5">
                <font>
                   <Font name="Calibri Bold" size="24.0" />
                </font>
