--- a/src/be/ac/ulb/infof307/g06/views/ProjectViews/ProjectsViewV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectViews/ProjectsViewV2.fxml
@@ -85,6 +85,7 @@
             <TextArea fx:id="descriptionTask" layoutX="21.0" layoutY="674.0" prefHeight="38.0" prefWidth="519.0" />
             <TextArea fx:id="collaboratorsName" layoutX="709.0" layoutY="675.0" prefHeight="38.0" prefWidth="224.0" />
             <Button fx:id="addCollaboratorsBtn" layoutX="951.0" layoutY="675.0" mnemonicParsing="false" onAction="#addCollaborator" prefHeight="37.0" prefWidth="69.0" text="ADD" />
+            <Button fx:id="exportProjectBtn" layoutX="205.0" layoutY="71.0" mnemonicParsing="false" text="Export" onAction="#events" />
          </children>
       </Pane>
       <Button fx:id="addBtn" layoutX="354.0" layoutY="817.0" mnemonicParsing="false" onAction="#events" prefHeight="54.0" prefWidth="111.0" style="-fx-background-color: #4fc3f7;" text="ADD" />
