--- a/src/be/ac/ulb/infof307/g06/views/Tags.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/Tags.fxml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -12,9 +19,18 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.MenuViewController">
    <children>
-      <Pane layoutX="812.0" layoutY="77.0" prefHeight="823.0" prefWidth="688.0" style="-fx-background-color: #4fc3f7;" />
+      <Pane layoutX="812.0" layoutY="77.0" prefHeight="823.0" prefWidth="688.0" style="-fx-background-color: #4fc3f7;">
+         <children>
+            <ColorPicker fx:id="tagsColorPicker" layoutX="452.0" layoutY="57.0" prefHeight="25.0" prefWidth="96.0" />
+            <TextField fx:id="defaultTagNameTextField" layoutX="50.0" layoutY="57.0" prefHeight="25.0" prefWidth="381.0" promptText="Default tag's name" />
+            <Button layoutX="574.0" layoutY="57.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: #e1e1e1;" text="ADD" textFill="#7c7676">
+               <font>
+                  <Font name="Calibri" size="12.0" />
+               </font>
+            </Button>
+         </children></Pane>
       <HBox layoutX="259.0" layoutY="350.0" spacing="40.0" />
-      <Button fx:id="backBtn" layoutX="1252.0" layoutY="816.0" mnemonicParsing="false" onAction="#settingsEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #e1e1e1;" text="BACK" textFill="#7c7676">
+      <Button fx:id="backBtn" layoutX="1252.0" layoutY="816.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #e1e1e1;" text="BACK" textFill="#7c7676">
          <font>
             <Font name="Calibri" size="24.0" />
          </font></Button>
@@ -40,5 +56,23 @@
             <Font name="Calibri" size="48.0" />
          </font>
       </Text>
+      <TableView fx:id="defaultTagsTableView" layoutX="161.0" layoutY="164.0" prefHeight="679.0" prefWidth="465.0">
+        <columns>
+          <TableColumn fx:id="defaultTagsColumn" prefWidth="463.99998474121094" text="default tags" />
+        </columns>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem mnemonicParsing="false" text="Delete" />
+                  <MenuItem mnemonicParsing="false" text="Edit" />
+                  <Menu mnemonicParsing="false" text="Unspecified Menu">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                    </items>
+                  </Menu>
+              </items>
+            </ContextMenu>
+         </contextMenu>
+      </TableView>
    </children>
 </AnchorPane>
