--- a/src/be/ac/ulb/infof307/g06/views/Tags.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/Tags.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.MenuViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.TagsViewController">
    <children>
       <Pane layoutX="812.0" layoutY="77.0" prefHeight="823.0" prefWidth="688.0" style="-fx-background-color: #4fc3f7;">
          <children>
@@ -67,7 +67,7 @@
                   <MenuItem mnemonicParsing="false" text="Edit" />
                   <Menu mnemonicParsing="false" text="Unspecified Menu">
                     <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                      <MenuItem mnemonicParsing="false" text="Edit" />
                     </items>
                   </Menu>
               </items>
