--- a/src/be/ac/ulb/infof307/g06/views/StatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/StatsView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.effect.Bloom?>
@@ -24,7 +25,7 @@
          </children>
       </VBox>
       <HBox alignment="CENTER_RIGHT" layoutX="489.0" layoutY="396.0" prefHeight="62.0" prefWidth="74.0" spacing="10.0" />
-      <Button fx:id="backToProjectMenu" layoutX="8.0" layoutY="7.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="81.0" prefWidth="93.0" style="-fx-background-color: #4fc3f7;" text="Back" textFill="WHITE">
+      <Button fx:id="backToProjectMenu" layoutX="8.0" layoutY="7.0" minWidth="53.0" mnemonicParsing="false" onAction="#events" prefHeight="81.0" prefWidth="93.0" style="-fx-background-color: #4fc3f7;" text="Back" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -54,14 +55,14 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button id="connectionBtn" fx:id="logOutBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="56.0" prefWidth="110.0" style="-fx-background-color: #4fc3f7;" text="LOGOUT" textAlignment="CENTER" textFill="WHITE" underline="true">
+            <Button id="connectionBtn" fx:id="logOutBtn" mnemonicParsing="false" onAction="#events" prefHeight="56.0" prefWidth="110.0" style="-fx-background-color: #4fc3f7;" text="LOGOUT" textAlignment="CENTER" textFill="WHITE" underline="true">
                <font>
                   <Font name="Calibri" size="18.0" />
                </font>
             </Button>
          </children>
       </HBox>
-      <Button fx:id="exportBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1225.0" layoutY="763.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #4fc3f7;" text="EXPORT" textFill="WHITE">
+      <Button fx:id="exportJSONBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1262.0" layoutY="766.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#events" prefHeight="51.0" prefWidth="74.0" style="-fx-background-color: #4fc3f7;" text=".json" textFill="WHITE">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
@@ -74,5 +75,11 @@
             <TreeTableColumn fx:id="estimatedColumn" prefWidth="92.0" text="Estimated" />
         </columns>
       </TreeTableView>
+      <Button fx:id="exportCSVBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1172.0" layoutY="766.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#events" prefHeight="51.0" prefWidth="74.0" style="-fx-background-color: #4fc3f7;" text=".csv" textFill="WHITE">
+         <font>
+            <Font name="Calibri" size="18.0" />
+         </font>
+      </Button>
+      <TextField fx:id="fileNameTextField" alignment="CENTER" layoutX="1094.0" layoutY="734.0" prefHeight="26.0" prefWidth="290.0" promptText="Statistics (Filename by default) " />
    </children>
 </AnchorPane>
